@@ -140,194 +140,194 @@ module Raylib
       :Remap => [:float, :float, :float, :float, :float],
       :Vector2Zero => [],
       :Vector2One => [],
-      :Vector2Add => [:int, :int],
-      :Vector2AddValue => [:int, :float],
-      :Vector2Subtract => [:int, :int],
-      :Vector2SubtractValue => [:int, :float],
-      :Vector2Length => [:int],
-      :Vector2LengthSqr => [:int],
-      :Vector2DotProduct => [:int, :int],
-      :Vector2Distance => [:int, :int],
-      :Vector2Angle => [:int, :int],
-      :Vector2Scale => [:int, :float],
-      :Vector2Multiply => [:int, :int],
-      :Vector2Negate => [:int],
-      :Vector2Divide => [:int, :int],
-      :Vector2Normalize => [:int],
-      :Vector2Lerp => [:int, :int, :float],
-      :Vector2Reflect => [:int, :int],
-      :Vector2Rotate => [:int, :float],
-      :Vector2MoveTowards => [:int, :int, :float],
+      :Vector2Add => [Vector2.by_value, Vector2.by_value],
+      :Vector2AddValue => [Vector2.by_value, :float],
+      :Vector2Subtract => [Vector2.by_value, Vector2.by_value],
+      :Vector2SubtractValue => [Vector2.by_value, :float],
+      :Vector2Length => [Vector2.by_value],
+      :Vector2LengthSqr => [Vector2.by_value],
+      :Vector2DotProduct => [Vector2.by_value, Vector2.by_value],
+      :Vector2Distance => [Vector2.by_value, Vector2.by_value],
+      :Vector2Angle => [Vector2.by_value, Vector2.by_value],
+      :Vector2Scale => [Vector2.by_value, :float],
+      :Vector2Multiply => [Vector2.by_value, Vector2.by_value],
+      :Vector2Negate => [Vector2.by_value],
+      :Vector2Divide => [Vector2.by_value, Vector2.by_value],
+      :Vector2Normalize => [Vector2.by_value],
+      :Vector2Lerp => [Vector2.by_value, Vector2.by_value, :float],
+      :Vector2Reflect => [Vector2.by_value, Vector2.by_value],
+      :Vector2Rotate => [Vector2.by_value, :float],
+      :Vector2MoveTowards => [Vector2.by_value, Vector2.by_value, :float],
       :Vector3Zero => [],
       :Vector3One => [],
-      :Vector3Add => [:int, :int],
-      :Vector3AddValue => [:int, :float],
-      :Vector3Subtract => [:int, :int],
-      :Vector3SubtractValue => [:int, :float],
-      :Vector3Scale => [:int, :float],
-      :Vector3Multiply => [:int, :int],
-      :Vector3CrossProduct => [:int, :int],
-      :Vector3Perpendicular => [:int],
-      :Vector3Length => [:int],
-      :Vector3LengthSqr => [:int],
-      :Vector3DotProduct => [:int, :int],
-      :Vector3Distance => [:int, :int],
-      :Vector3Angle => [:int, :int],
-      :Vector3Negate => [:int],
-      :Vector3Divide => [:int, :int],
-      :Vector3Normalize => [:int],
+      :Vector3Add => [Vector3.by_value, Vector3.by_value],
+      :Vector3AddValue => [Vector3.by_value, :float],
+      :Vector3Subtract => [Vector3.by_value, Vector3.by_value],
+      :Vector3SubtractValue => [Vector3.by_value, :float],
+      :Vector3Scale => [Vector3.by_value, :float],
+      :Vector3Multiply => [Vector3.by_value, Vector3.by_value],
+      :Vector3CrossProduct => [Vector3.by_value, Vector3.by_value],
+      :Vector3Perpendicular => [Vector3.by_value],
+      :Vector3Length => [const Vector3],
+      :Vector3LengthSqr => [const Vector3],
+      :Vector3DotProduct => [Vector3.by_value, Vector3.by_value],
+      :Vector3Distance => [Vector3.by_value, Vector3.by_value],
+      :Vector3Angle => [Vector3.by_value, Vector3.by_value],
+      :Vector3Negate => [Vector3.by_value],
+      :Vector3Divide => [Vector3.by_value, Vector3.by_value],
+      :Vector3Normalize => [Vector3.by_value],
       :Vector3OrthoNormalize => [:pointer, :pointer],
-      :Vector3Transform => [:int, :int],
-      :Vector3RotateByQuaternion => [:int, :int],
-      :Vector3Lerp => [:int, :int, :float],
-      :Vector3Reflect => [:int, :int],
-      :Vector3Min => [:int, :int],
-      :Vector3Max => [:int, :int],
-      :Vector3Barycenter => [:int, :int, :int, :int],
-      :Vector3Unproject => [:int, :int, :int],
-      :Vector3ToFloatV => [:int],
-      :MatrixDeterminant => [:int],
-      :MatrixTrace => [:int],
-      :MatrixTranspose => [:int],
-      :MatrixInvert => [:int],
-      :MatrixNormalize => [:int],
+      :Vector3Transform => [Vector3.by_value, Matrix.by_value],
+      :Vector3RotateByQuaternion => [Vector3.by_value, Quaternion.by_value],
+      :Vector3Lerp => [Vector3.by_value, Vector3.by_value, :float],
+      :Vector3Reflect => [Vector3.by_value, Vector3.by_value],
+      :Vector3Min => [Vector3.by_value, Vector3.by_value],
+      :Vector3Max => [Vector3.by_value, Vector3.by_value],
+      :Vector3Barycenter => [Vector3.by_value, Vector3.by_value, Vector3.by_value, Vector3.by_value],
+      :Vector3Unproject => [Vector3.by_value, Matrix.by_value, Matrix.by_value],
+      :Vector3ToFloatV => [Vector3.by_value],
+      :MatrixDeterminant => [Matrix.by_value],
+      :MatrixTrace => [Matrix.by_value],
+      :MatrixTranspose => [Matrix.by_value],
+      :MatrixInvert => [Matrix.by_value],
+      :MatrixNormalize => [Matrix.by_value],
       :MatrixIdentity => [],
-      :MatrixAdd => [:int, :int],
-      :MatrixSubtract => [:int, :int],
-      :MatrixMultiply => [:int, :int],
+      :MatrixAdd => [Matrix.by_value, Matrix.by_value],
+      :MatrixSubtract => [Matrix.by_value, Matrix.by_value],
+      :MatrixMultiply => [Matrix.by_value, Matrix.by_value],
       :MatrixTranslate => [:float, :float, :float],
-      :MatrixRotate => [:int, :float],
+      :MatrixRotate => [Vector3.by_value, :float],
       :MatrixRotateX => [:float],
       :MatrixRotateY => [:float],
       :MatrixRotateZ => [:float],
-      :MatrixRotateXYZ => [:int],
-      :MatrixRotateZYX => [:int],
+      :MatrixRotateXYZ => [Vector3.by_value],
+      :MatrixRotateZYX => [Vector3.by_value],
       :MatrixScale => [:float, :float, :float],
       :MatrixFrustum => [:double, :double, :double, :double, :double, :double],
       :MatrixPerspective => [:double, :double, :double, :double],
       :MatrixOrtho => [:double, :double, :double, :double, :double, :double],
-      :MatrixLookAt => [:int, :int, :int],
-      :MatrixToFloatV => [:int],
-      :QuaternionAdd => [:int, :int],
-      :QuaternionAddValue => [:int, :float],
-      :QuaternionSubtract => [:int, :int],
-      :QuaternionSubtractValue => [:int, :float],
+      :MatrixLookAt => [Vector3.by_value, Vector3.by_value, Vector3.by_value],
+      :MatrixToFloatV => [Matrix.by_value],
+      :QuaternionAdd => [Quaternion.by_value, Quaternion.by_value],
+      :QuaternionAddValue => [Quaternion.by_value, :float],
+      :QuaternionSubtract => [Quaternion.by_value, Quaternion.by_value],
+      :QuaternionSubtractValue => [Quaternion.by_value, :float],
       :QuaternionIdentity => [],
-      :QuaternionLength => [:int],
-      :QuaternionNormalize => [:int],
-      :QuaternionInvert => [:int],
-      :QuaternionMultiply => [:int, :int],
-      :QuaternionScale => [:int, :float],
-      :QuaternionDivide => [:int, :int],
-      :QuaternionLerp => [:int, :int, :float],
-      :QuaternionNlerp => [:int, :int, :float],
-      :QuaternionSlerp => [:int, :int, :float],
-      :QuaternionFromVector3ToVector3 => [:int, :int],
-      :QuaternionFromMatrix => [:int],
-      :QuaternionToMatrix => [:int],
-      :QuaternionFromAxisAngle => [:int, :float],
-      :QuaternionToAxisAngle => [:int, :pointer, :pointer],
+      :QuaternionLength => [Quaternion.by_value],
+      :QuaternionNormalize => [Quaternion.by_value],
+      :QuaternionInvert => [Quaternion.by_value],
+      :QuaternionMultiply => [Quaternion.by_value, Quaternion.by_value],
+      :QuaternionScale => [Quaternion.by_value, :float],
+      :QuaternionDivide => [Quaternion.by_value, Quaternion.by_value],
+      :QuaternionLerp => [Quaternion.by_value, Quaternion.by_value, :float],
+      :QuaternionNlerp => [Quaternion.by_value, Quaternion.by_value, :float],
+      :QuaternionSlerp => [Quaternion.by_value, Quaternion.by_value, :float],
+      :QuaternionFromVector3ToVector3 => [Vector3.by_value, Vector3.by_value],
+      :QuaternionFromMatrix => [Matrix.by_value],
+      :QuaternionToMatrix => [Quaternion.by_value],
+      :QuaternionFromAxisAngle => [Vector3.by_value, :float],
+      :QuaternionToAxisAngle => [Quaternion.by_value, :pointer, :pointer],
       :QuaternionFromEuler => [:float, :float, :float],
-      :QuaternionToEuler => [:int],
-      :QuaternionTransform => [:int, :int],
+      :QuaternionToEuler => [Quaternion.by_value],
+      :QuaternionTransform => [Quaternion.by_value, Matrix.by_value],
     }
     retvals = {
       :Clamp => :float,
       :Lerp => :float,
       :Normalize => :float,
       :Remap => :float,
-      :Vector2Zero => :int,
-      :Vector2One => :int,
-      :Vector2Add => :int,
-      :Vector2AddValue => :int,
-      :Vector2Subtract => :int,
-      :Vector2SubtractValue => :int,
+      :Vector2Zero => Vector2.by_value,
+      :Vector2One => Vector2.by_value,
+      :Vector2Add => Vector2.by_value,
+      :Vector2AddValue => Vector2.by_value,
+      :Vector2Subtract => Vector2.by_value,
+      :Vector2SubtractValue => Vector2.by_value,
       :Vector2Length => :float,
       :Vector2LengthSqr => :float,
       :Vector2DotProduct => :float,
       :Vector2Distance => :float,
       :Vector2Angle => :float,
-      :Vector2Scale => :int,
-      :Vector2Multiply => :int,
-      :Vector2Negate => :int,
-      :Vector2Divide => :int,
-      :Vector2Normalize => :int,
-      :Vector2Lerp => :int,
-      :Vector2Reflect => :int,
-      :Vector2Rotate => :int,
-      :Vector2MoveTowards => :int,
-      :Vector3Zero => :int,
-      :Vector3One => :int,
-      :Vector3Add => :int,
-      :Vector3AddValue => :int,
-      :Vector3Subtract => :int,
-      :Vector3SubtractValue => :int,
-      :Vector3Scale => :int,
-      :Vector3Multiply => :int,
-      :Vector3CrossProduct => :int,
-      :Vector3Perpendicular => :int,
+      :Vector2Scale => Vector2.by_value,
+      :Vector2Multiply => Vector2.by_value,
+      :Vector2Negate => Vector2.by_value,
+      :Vector2Divide => Vector2.by_value,
+      :Vector2Normalize => Vector2.by_value,
+      :Vector2Lerp => Vector2.by_value,
+      :Vector2Reflect => Vector2.by_value,
+      :Vector2Rotate => Vector2.by_value,
+      :Vector2MoveTowards => Vector2.by_value,
+      :Vector3Zero => Vector3.by_value,
+      :Vector3One => Vector3.by_value,
+      :Vector3Add => Vector3.by_value,
+      :Vector3AddValue => Vector3.by_value,
+      :Vector3Subtract => Vector3.by_value,
+      :Vector3SubtractValue => Vector3.by_value,
+      :Vector3Scale => Vector3.by_value,
+      :Vector3Multiply => Vector3.by_value,
+      :Vector3CrossProduct => Vector3.by_value,
+      :Vector3Perpendicular => Vector3.by_value,
       :Vector3Length => :float,
       :Vector3LengthSqr => :float,
       :Vector3DotProduct => :float,
       :Vector3Distance => :float,
-      :Vector3Angle => :int,
-      :Vector3Negate => :int,
-      :Vector3Divide => :int,
-      :Vector3Normalize => :int,
+      :Vector3Angle => Vector2.by_value,
+      :Vector3Negate => Vector3.by_value,
+      :Vector3Divide => Vector3.by_value,
+      :Vector3Normalize => Vector3.by_value,
       :Vector3OrthoNormalize => :void,
-      :Vector3Transform => :int,
-      :Vector3RotateByQuaternion => :int,
-      :Vector3Lerp => :int,
-      :Vector3Reflect => :int,
-      :Vector3Min => :int,
-      :Vector3Max => :int,
-      :Vector3Barycenter => :int,
-      :Vector3Unproject => :int,
+      :Vector3Transform => Vector3.by_value,
+      :Vector3RotateByQuaternion => Vector3.by_value,
+      :Vector3Lerp => Vector3.by_value,
+      :Vector3Reflect => Vector3.by_value,
+      :Vector3Min => Vector3.by_value,
+      :Vector3Max => Vector3.by_value,
+      :Vector3Barycenter => Vector3.by_value,
+      :Vector3Unproject => Vector3.by_value,
       :Vector3ToFloatV => Float3.by_value,
       :MatrixDeterminant => :float,
       :MatrixTrace => :float,
-      :MatrixTranspose => :int,
-      :MatrixInvert => :int,
-      :MatrixNormalize => :int,
-      :MatrixIdentity => :int,
-      :MatrixAdd => :int,
-      :MatrixSubtract => :int,
-      :MatrixMultiply => :int,
-      :MatrixTranslate => :int,
-      :MatrixRotate => :int,
-      :MatrixRotateX => :int,
-      :MatrixRotateY => :int,
-      :MatrixRotateZ => :int,
-      :MatrixRotateXYZ => :int,
-      :MatrixRotateZYX => :int,
-      :MatrixScale => :int,
-      :MatrixFrustum => :int,
-      :MatrixPerspective => :int,
-      :MatrixOrtho => :int,
-      :MatrixLookAt => :int,
+      :MatrixTranspose => Matrix.by_value,
+      :MatrixInvert => Matrix.by_value,
+      :MatrixNormalize => Matrix.by_value,
+      :MatrixIdentity => Matrix.by_value,
+      :MatrixAdd => Matrix.by_value,
+      :MatrixSubtract => Matrix.by_value,
+      :MatrixMultiply => Matrix.by_value,
+      :MatrixTranslate => Matrix.by_value,
+      :MatrixRotate => Matrix.by_value,
+      :MatrixRotateX => Matrix.by_value,
+      :MatrixRotateY => Matrix.by_value,
+      :MatrixRotateZ => Matrix.by_value,
+      :MatrixRotateXYZ => Matrix.by_value,
+      :MatrixRotateZYX => Matrix.by_value,
+      :MatrixScale => Matrix.by_value,
+      :MatrixFrustum => Matrix.by_value,
+      :MatrixPerspective => Matrix.by_value,
+      :MatrixOrtho => Matrix.by_value,
+      :MatrixLookAt => Matrix.by_value,
       :MatrixToFloatV => Float16.by_value,
-      :QuaternionAdd => :int,
-      :QuaternionAddValue => :int,
-      :QuaternionSubtract => :int,
-      :QuaternionSubtractValue => :int,
-      :QuaternionIdentity => :int,
+      :QuaternionAdd => Quaternion.by_value,
+      :QuaternionAddValue => Quaternion.by_value,
+      :QuaternionSubtract => Quaternion.by_value,
+      :QuaternionSubtractValue => Quaternion.by_value,
+      :QuaternionIdentity => Quaternion.by_value,
       :QuaternionLength => :float,
-      :QuaternionNormalize => :int,
-      :QuaternionInvert => :int,
-      :QuaternionMultiply => :int,
-      :QuaternionScale => :int,
-      :QuaternionDivide => :int,
-      :QuaternionLerp => :int,
-      :QuaternionNlerp => :int,
-      :QuaternionSlerp => :int,
-      :QuaternionFromVector3ToVector3 => :int,
-      :QuaternionFromMatrix => :int,
-      :QuaternionToMatrix => :int,
-      :QuaternionFromAxisAngle => :int,
+      :QuaternionNormalize => Quaternion.by_value,
+      :QuaternionInvert => Quaternion.by_value,
+      :QuaternionMultiply => Quaternion.by_value,
+      :QuaternionScale => Quaternion.by_value,
+      :QuaternionDivide => Quaternion.by_value,
+      :QuaternionLerp => Quaternion.by_value,
+      :QuaternionNlerp => Quaternion.by_value,
+      :QuaternionSlerp => Quaternion.by_value,
+      :QuaternionFromVector3ToVector3 => Quaternion.by_value,
+      :QuaternionFromMatrix => Quaternion.by_value,
+      :QuaternionToMatrix => Matrix.by_value,
+      :QuaternionFromAxisAngle => Quaternion.by_value,
       :QuaternionToAxisAngle => :void,
-      :QuaternionFromEuler => :int,
-      :QuaternionToEuler => :int,
-      :QuaternionTransform => :int,
+      :QuaternionFromEuler => Quaternion.by_value,
+      :QuaternionToEuler => Vector3.by_value,
+      :QuaternionTransform => Quaternion.by_value,
     }
     symbols.each do |sym|
       begin
