@@ -459,7 +459,7 @@ module Raylib
       :rlGetLocationUniform => [:uint, :pointer],
       :rlGetLocationAttrib => [:uint, :pointer],
       :rlSetUniform => [:int, :pointer, :int, :int],
-      :rlSetUniformMatrix => [:int, :int],
+      :rlSetUniformMatrix => [:int, Matrix.by_value],
       :rlSetUniformSampler => [:int, :uint],
       :rlSetShader => [:uint, :pointer],
       :rlGetMatrixModelview => [],
@@ -467,10 +467,10 @@ module Raylib
       :rlGetMatrixTransform => [],
       :rlGetMatrixProjectionStereo => [:int],
       :rlGetMatrixViewOffsetStereo => [:int],
-      :rlSetMatrixProjection => [:int],
-      :rlSetMatrixModelview => [:int],
-      :rlSetMatrixProjectionStereo => [:int, :int],
-      :rlSetMatrixViewOffsetStereo => [:int, :int],
+      :rlSetMatrixProjection => [Matrix.by_value],
+      :rlSetMatrixModelview => [Matrix.by_value],
+      :rlSetMatrixProjectionStereo => [Matrix.by_value, Matrix.by_value],
+      :rlSetMatrixViewOffsetStereo => [Matrix.by_value, Matrix.by_value],
       :rlLoadDrawCube => [],
       :rlLoadDrawQuad => [],
     }
@@ -593,11 +593,11 @@ module Raylib
       :rlSetUniformMatrix => :void,
       :rlSetUniformSampler => :void,
       :rlSetShader => :void,
-      :rlGetMatrixModelview => :int,
-      :rlGetMatrixProjection => :int,
-      :rlGetMatrixTransform => :int,
-      :rlGetMatrixProjectionStereo => :int,
-      :rlGetMatrixViewOffsetStereo => :int,
+      :rlGetMatrixModelview => Matrix.by_value,
+      :rlGetMatrixProjection => Matrix.by_value,
+      :rlGetMatrixTransform => Matrix.by_value,
+      :rlGetMatrixProjectionStereo => Matrix.by_value,
+      :rlGetMatrixViewOffsetStereo => Matrix.by_value,
       :rlSetMatrixProjection => :void,
       :rlSetMatrixModelview => :void,
       :rlSetMatrixProjectionStereo => :void,
