@@ -1,3 +1,7 @@
+2021-11-04  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* Bugfix: Generate correct signatures for raymath and rlgl
+
 2021-11-03  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* Added raygui wrapper and wrapper generator
